dev/bozobooks-manifests/deployment-manifests/book-info-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-info-service-svc
  namespace: bozo-book-library-dev
  labels:
    application: bozo-book-library
spec:
  type: ClusterIP
  selector:
    app: book-info-service

  ports:
  - name: http
    port: 8080
    targetPort: 8080
