dev/bozobooks-manifests/deployment-manifests/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong

spec:
  tls:
  - hosts:
    - argo.hossam.io
    secretName: argo-ingress-tls
  rules:
  - host: argo.hossam.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
