dev/bozobooks-manifests/deployment-manifests/book-info-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bozo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong

spec:
  tls:
  - hosts:
    - bozo.hossam.io
    secretName: bozo-ingress-tls
  rules:
  - host: bozo.hossam.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-info-service-svc
            port:
              number: 8080
